Edited Book module to be lazy loaded

--- a/client/src/app/books/catalog/catalog.component.html
+++ b/client/src/app/books/catalog/catalog.component.html
@@ -8,7 +8,7 @@
    </div>
    <ng-container *ngIf="loggedIn">
       <div class="header">
-         <button mat-raised-button color="accent" [routerLink]="['/add-book']"><mat-icon>add_circle_outline</mat-icon>
+         <button mat-raised-button color="accent" [routerLink]="['/catalog/add-book']"><mat-icon>add_circle_outline</mat-icon>
             Add
             New Book!</button>
       </div>
