--- a/client/src/app/users/login/login.component.html
+++ b/client/src/app/users/login/login.component.html
@@ -14,7 +14,7 @@
         <mat-card-subtitle>
           <p>
             Not a registered reader? Please use the
-            <a [routerLink]="['/register']">Register page</a> instead!
+            <a [routerLink]="['/users/register']">Register page</a> instead!
           </p>
           <br />
         </mat-card-subtitle>
