--- a/client/src/app/users/register/register.component.html
+++ b/client/src/app/users/register/register.component.html
@@ -9,7 +9,7 @@
                <h2 class="title"><mat-icon>account_circle</mat-icon> Welcome, new reader, register below!</h2>
             </mat-card-title>
             <mat-card-subtitle>
-               <p>Not a new reader? Please use the <a [routerLink]="['/login']">Login page</a> instead!</p>
+               <p>Not a new reader? Please use the <a [routerLink]="['/users/login']">Login page</a> instead!</p>
                <br>
             </mat-card-subtitle>
          </mat-card-title-group>
