--- a/client/src/app/main/home/home.component.html
+++ b/client/src/app/main/home/home.component.html
@@ -24,8 +24,8 @@
       </p>
       <p class="p-text">You are free to explore our <a [routerLink]="['/catalog']">Book Catalog</a> and take a look
          around. If you wish to join us,
-         go and quickly <a [routerLink]="['/register']">Register</a>. Or, in case you are already one of us, welcome
-         back and <a [routerLink]="['/login']">Login</a> ahead.
+         go and quickly <a [routerLink]="['/users/register']">Register</a>. Or, in case you are already one of us, welcome
+         back and <a [routerLink]="['/users/login']">Login</a> ahead.
       </p>
       <p class="p-text">By registering or logging in you will be able to share the full experience, for example to tell
          us which books from your home library you are
@@ -86,7 +86,7 @@
                </mat-card-header>
                <mat-card-content>
                   <div class="label"><strong>Book Owner:</strong></div>
-                  <a [routerLink]="['/profile', book.owner._id]">
+                  <a [routerLink]="['/users/profile', book.owner._id]">
                      <p>{{book.owner.username}}</p>
                   </a>
                   <br>
