--- a/client/src/app/shared/navigation/navigation.component.html
+++ b/client/src/app/shared/navigation/navigation.component.html
@@ -2,7 +2,7 @@
    fxLayoutAlign="center center">
    <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" [routerLink]="['/']">
       <mat-icon>home</mat-icon>Home</button>
-   <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" [routerLink]="['/catalog']">
+   <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" [routerLink]="['/catalog']" [queryParams]="{ page: 0 }">
       <mat-icon>collections_bookmark</mat-icon>Book Catalog</button>
    <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" [routerLink]="['/search']">
       <mat-icon>search</mat-icon>Search</button>
