Implemented back buttons to each page that opens a single item for view or edit; simplified back button on View book page

--- a/client/src/app/books/add-book/add-book.component.html
+++ b/client/src/app/books/add-book/add-book.component.html
@@ -2,6 +2,7 @@
   <mat-spinner></mat-spinner>
 </div>
 <div class="top-div" *ngIf="!isLoading">
+  <button mat-raised-button (click)="goBack()"><mat-icon>arrow_back</mat-icon>Back</button>
   <mat-card>
     <mat-card-header>
       <mat-card-title-group>
