--- a/client/src/app/users/login/login.component.html
+++ b/client/src/app/users/login/login.component.html
@@ -2,6 +2,7 @@
   <mat-spinner></mat-spinner>
 </div>
 <div class="top-div" *ngIf="!isLoading">
+  <button mat-raised-button (click)="goBack()"><mat-icon>arrow_back</mat-icon>Back</button>
   <mat-card>
     <mat-card-header>
       <mat-card-title-group>
