Developed FE request to add a comment for a book and BE handling of such request with creating new comment + updating the book rating

--- a/client/src/app/comments/add-comment/add-comment.component.scss
+++ b/client/src/app/comments/add-comment/add-comment.component.scss
@@ -2,7 +2,7 @@
    display: flex;
    justify-content: center;
    align-items: center;
-   height: 60vh;
+   height: 65vh;
    width: 50vh;
 }
 
@@ -22,4 +22,5 @@
 
 .submit-comment-btn{
    text-align: right;
+   margin: 15px
 }
