--- a/client/src/app/comments/add-comment/add-comment.component.html
+++ b/client/src/app/comments/add-comment/add-comment.component.html
@@ -72,6 +72,7 @@
     <div class="submit-comment-btn">
       <button 
         mat-raised-button
+        style="margin: 5px"
         color="primary"
         [mat-dialog-close]="true"
         cdkFocusInitial
@@ -80,9 +81,7 @@
       >
         <mat-icon>send</mat-icon>Submit
       </button>
+      <button style="margin: 5px; color: black" mat-raised-button color="basic" mat-dialog-close>Cancel</button>
     </div>
   </form>
 </mat-dialog-content>
-<mat-dialog-actions align="end">
-  <button mat-raised-button color="basic" mat-dialog-close>Cancel</button>
-</mat-dialog-actions>
