--- a/client/src/app/comments/all-comments/all-comments.component.html
+++ b/client/src/app/comments/all-comments/all-comments.component.html
@@ -2,10 +2,10 @@
   <mat-spinner></mat-spinner>
 </div>
 
-<div class="header">
+<div class="header" *ngIf="!isLoading">
   <p>Book Comments</p>
 </div>
-<div class="header">
+<div class="header" *ngIf="!isLoading">
   <button mat-raised-button color="accent" (click)="newComment()">
     <mat-icon>comment</mat-icon> Add New Comment
   </button>
