--- a/client/src/app/comments/all-comments/all-comments.component.html
+++ b/client/src/app/comments/all-comments/all-comments.component.html
@@ -64,7 +64,7 @@
             mat-icon-button
             color="warn"
             *ngIf="comment.user._id === this.currentUserId"
-            click=""
+            (click)="comment._id && deleteComment(comment._id)"
           >
             <mat-icon>delete</mat-icon>
           </button>
