--- a/client/src/app/comments/all-comments/all-comments.component.html
+++ b/client/src/app/comments/all-comments/all-comments.component.html
@@ -56,7 +56,7 @@
             mat-icon-button
             color="basic"
             *ngIf="comment.user._id === this.currentUserId"
-            click=""
+            (click)="comment._id && editComment(comment._id, comment.title, comment.commentBody, comment.ratedBookWith)"
           >
             <mat-icon>edit</mat-icon>
           </button>
