--- a/client/src/app/comments/edit-comment/edit-comment.component.html
+++ b/client/src/app/comments/edit-comment/edit-comment.component.html
@@ -1,1 +1,93 @@
-<h1>edit-comment works!</h1>
+<mat-dialog-content class="mat-dialog-content-comment">
+   <form #formComment="ngForm" (ngSubmit)="editComment(formComment)">
+     <div>
+       <h2 class="form-header">
+         <mat-icon>comment</mat-icon> Add new comment from below
+       </h2>
+     </div>
+     <div>
+       <p class="field-label">Change the title of your comment below:</p>
+       <mat-form-field class="mat-form-comment" appearance="fill">
+         <mat-label>Title</mat-label>
+         <input
+           matInput
+           name="title"
+           [(ngModel)]="this.commentData.title"
+           required
+           minlength="5"
+           maxlength="35"
+           #titleField="ngModel"
+         />
+         <mat-error *ngIf="titleField.errors?.['required']"
+           >Title is required.</mat-error
+         >
+         <mat-error *ngIf="titleField.errors?.['minlength']"
+           >Title must be between 5 and 35 characters long.</mat-error
+         >
+         <mat-error *ngIf="titleField.errors?.['maxlength']"
+           >Title must be between 5 and 35 characters long.</mat-error
+         >
+       </mat-form-field>
+     </div>
+ 
+     <div *ngIf="!this.commentData.hasRatedBook">
+       <p class="field-label">
+         Between 1 and 5 (5 being the highest) how would you rate this book?
+       </p>
+       <mat-form-field class="mat-form-comment" appearance="fill">
+         <mat-label>Rating</mat-label>
+         <mat-select name="ratedBookWith" ngModel #ratedBookWithField="ngModel">
+           <mat-option *ngFor="let i of [1, 2, 3, 4, 5]" [value]="i">
+             {{ i }} stars
+           </mat-option>
+         </mat-select>
+       </mat-form-field>
+     </div>
+ 
+     <div *ngIf="this.commentData.hasRatedBook">
+       <p class="field-label">
+         Rating: You can rate a book only once, with no edits or deletion possible afterwards.
+       </p>
+     </div>
+ 
+     <div>
+       <p class="field-label">Change the text of your comment below:</p>
+       <mat-form-field class="mat-form-comment" appearance="fill">
+         <mat-label>Text</mat-label>
+         <textarea
+           class="mat-input-comment"
+           matInput
+           name="commentBody"
+           [(ngModel)]="this.commentData.commentBody"
+           required
+           minlength="10"
+           maxlength="1000"
+           #commentBodyField="ngModel"
+         ></textarea>
+         <mat-error *ngIf="commentBodyField.errors?.['required']"
+           >Text is required.</mat-error
+         >
+         <mat-error *ngIf="commentBodyField.errors?.['minlength']"
+           >Text must be between 10 and 1000 characters long.</mat-error
+         >
+         <mat-error *ngIf="commentBodyField.errors?.['maxlength']"
+           >Text must be between 10 and 1000 characters long.</mat-error
+         >
+       </mat-form-field>
+     </div>
+     <div class="submit-comment-btn">
+       <button 
+         mat-raised-button
+         style="margin: 5px"
+         color="primary"
+         [mat-dialog-close]="true"
+         cdkFocusInitial
+         type="submit"
+         [disabled]="!formComment.valid"
+       >
+         <mat-icon>send</mat-icon>Submit
+       </button>
+       <button style="margin: 5px; color: black" mat-raised-button color="basic" mat-dialog-close>Cancel</button>
+     </div>
+   </form>
+ </mat-dialog-content>
