--- a/client/src/app/comments/all-comments/all-comments.component.html
+++ b/client/src/app/comments/all-comments/all-comments.component.html
@@ -41,22 +41,39 @@
         /></mat-panel-title>
         <mat-panel-title class="panel-title">
           Comment useful?
-          <button mat-icon-button color="basic" click="" onclick="">
+          <button
+            mat-icon-button
+            color="basic"
+            (click)="comment._id && voteHelpful(comment._id)"
+            [disabled]="comment.user._id == this.currentUserId || isUserVotedHelpful(comment)"
+          >
             <mat-icon>thumb_up</mat-icon>
           </button>
-          <p>{{ 0 }}</p>
-          <button mat-icon-button color="basic" click="" onclick="">
+          <p>{{ comment.helpfulYes }}</p>
+          <button
+            mat-icon-button
+            color="basic"
+            (click)="comment._id && voteNotHelpful(comment._id)"
+            [disabled]="comment.user._id == this.currentUserId || isUserVotedHelpful(comment)"
+          >
             <mat-icon>thumb_down</mat-icon>
           </button>
-          <p>{{ 0 }}</p>
-          <hr />
+          <p>{{ comment.helpfulNo }}</p>
         </mat-panel-title>
         <mat-panel-title class="panel-title">
           <button
             mat-icon-button
             color="basic"
-            *ngIf="comment.user._id === this.currentUserId"
-            (click)="comment._id && editComment(comment._id, comment.title, comment.commentBody, comment.ratedBookWith)"
+            *ngIf="comment.user._id === this.currentUserId || isUserVotedHelpful(comment)"
+            (click)="
+              comment._id &&
+                editComment(
+                  comment._id,
+                  comment.title,
+                  comment.commentBody,
+                  comment.ratedBookWith
+                )
+            "
           >
             <mat-icon>edit</mat-icon>
           </button>
@@ -72,17 +89,12 @@
         </mat-panel-title>
 
         <mat-panel-description class="panel-description">
-          {{ panelOpenState ? "Hide Comment Text..." : "Show Comment Text..." }}
         </mat-panel-description>
       </mat-expansion-panel-header>
-      <div
-      class="panel-title"
-      *ngIf="comment.ratedBookWith !== 0"
-    >
-      I rate this book: {{ comment.ratedBookWith }} / 5
-      
-   </div>
-   <hr />
+      <div class="panel-title" *ngIf="comment.ratedBookWith !== 0">
+        I rate this book: {{ comment.ratedBookWith }} / 5
+      </div>
+      <hr />
       <p>{{ comment.commentBody }}</p>
     </mat-expansion-panel>
   </mat-accordion>
