Fixed edit icon on comments appearing to comment non-owners

--- a/client/src/app/comments/all-comments/all-comments.component.html
+++ b/client/src/app/comments/all-comments/all-comments.component.html
@@ -64,7 +64,7 @@
           <button
             mat-icon-button
             color="basic"
-            *ngIf="comment.user._id === this.currentUserId || isUserVotedHelpful(comment)"
+            *ngIf="comment.user._id === this.currentUserId"
             (click)="
               comment._id &&
                 editComment(
