Fixed some spelling errors

--- a/client/src/app/main/about/about.component.html
+++ b/client/src/app/main/about/about.component.html
@@ -10,14 +10,14 @@
    </div>
    <div class="grid-item">
       <p class="p-text">First things first, thank you for visiting the App and the About page. As The Book Corner is a
-         student project, I would assume you are either one of my fellow students or one ouf our instructors. In both
-         cases, hello!
+         student project, I would assume you are either one of my fellow students or one of our instructors. In both
+         cases, hello and welcome!
       </p>
       <p class="p-text">If you are not a person from my classes, but a curious fella (or lady) hello to you too and I
          am happy The Book Corner caught your eye!
          Please be aware that this is an Angular App developed by me for my Angular course exam. I will not make
          excuses, but just know it is beginner level and I do understand there is more to be required, but hey, Netflix,
-         Google, Microsoft, Nintendo (and Rome) were not build in a month.
+         Google, Microsoft, Nintendo (and Rome) were not build in a month (day) singlehandedly.
       </p>
       <p class="p-text">That said, this App is not for commercial use and it is not intended to be deployed. It is meant
          only to be used as project work for my exam. If you are the one examining me, I hope the experience was good enough.</p>
