Fixed buttons for pass visibility unintentionally submitting login or register forms due to focused and enter key pressed

--- a/client/src/app/users/login/login.component.html
+++ b/client/src/app/users/login/login.component.html
@@ -52,6 +52,7 @@
             />
 
             <button
+            type="button"
               mat-icon-button
               matSuffix
               (click)="hide = !hide"
