--- a/client/src/app/users/register/register.component.html
+++ b/client/src/app/users/register/register.component.html
@@ -1,138 +1,216 @@
 <div class="center-div" *ngIf="isLoading">
-   <mat-spinner></mat-spinner>
+  <mat-spinner></mat-spinner>
 </div>
 <div class="top-div" *ngIf="!isLoading">
-   <button mat-raised-button (click)="goBack()"><mat-icon>arrow_back</mat-icon>Back</button>
-   <mat-card>
-      <mat-card-header>
-         <mat-card-title-group>
-            <mat-card-title>
-               <h2 class="title"><mat-icon>account_circle</mat-icon> Welcome, new reader, register below!</h2>
-            </mat-card-title>
-            <mat-card-subtitle>
-               <p>Not a new reader? Please use the <a [routerLink]="['/users/login']">Login page</a> instead!</p>
-               <br>
-            </mat-card-subtitle>
-         </mat-card-title-group>
-      </mat-card-header>
-      <mat-card-content>
-         <form [formGroup]="registerForm" (ngSubmit)="onRegister()">
-            <div class="label">
-               <mat-form-field class="mat-form-field" appearance="fill">
-                  <mat-label>Enter your First Name</mat-label>
-                  <input matInput formControlName="firstName">
-                  <mat-error *ngIf="registerForm.get('firstName')?.errors?.['required']">First Name is
-                     required.</mat-error>
-                  <mat-error *ngIf="registerForm.get('firstName')?.errors?.['minlength']">First Name must be at least 2
-                     characters long.</mat-error>
-                     <mat-error *ngIf="registerForm.get('firstName')?.errors?.['maxlength']">First Name must be no more than
-                        30 characters long.</mat-error>
-                  <mat-error *ngIf="registerForm.get('firstName')?.errors?.['pattern']">
-                     Please use only letters, or a hyphen if your first name is hyphenated.
-                  </mat-error>
-               </mat-form-field>
-            </div>
+  <button mat-raised-button (click)="goBack()">
+    <mat-icon>arrow_back</mat-icon>Back
+  </button>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title-group>
+        <mat-card-title>
+          <h2 class="title">
+            <mat-icon>account_circle</mat-icon> Welcome, new reader, register
+            below!
+          </h2>
+        </mat-card-title>
+        <mat-card-subtitle>
+          <p>
+            Not a new reader? Please use the
+            <a [routerLink]="['/users/login']">Login page</a> instead!
+          </p>
+          <br />
+        </mat-card-subtitle>
+      </mat-card-title-group>
+    </mat-card-header>
+    <mat-card-content>
+      <form [formGroup]="registerForm" (ngSubmit)="onRegister()">
+        <div class="label">
+          <mat-form-field class="mat-form-field" appearance="fill">
+            <mat-label>Enter your First Name</mat-label>
+            <input matInput formControlName="firstName" />
+            <mat-error
+              *ngIf="registerForm.get('firstName')?.errors?.['required']"
+              >First Name is required.</mat-error
+            >
+            <mat-error
+              *ngIf="registerForm.get('firstName')?.errors?.['minlength']"
+              >First Name must be at least 2 characters long.</mat-error
+            >
+            <mat-error
+              *ngIf="registerForm.get('firstName')?.errors?.['maxlength']"
+              >First Name must be no more than 30 characters long.</mat-error
+            >
+            <mat-error
+              *ngIf="registerForm.get('firstName')?.errors?.['pattern']"
+            >
+              Please use only letters, or a hyphen if your first name is
+              hyphenated.
+            </mat-error>
+          </mat-form-field>
+        </div>
 
-            <div class="label">
-               <mat-form-field class="mat-form-field" appearance="fill">
-                  <mat-label>Enter your Last Name</mat-label>
-                  <input matInput formControlName="lastName">
-                  <mat-error *ngIf="registerForm.get('lastName')?.errors?.['required']">Last Name is
-                     required.</mat-error>
-                  <mat-error *ngIf="registerForm.get('lastName')?.errors?.['minlength']">Last Name must be at least 2
-                     characters long.</mat-error>
-                     <mat-error *ngIf="registerForm.get('lastName')?.errors?.['maxlength']">Last Name must be no more than
-                        50 characters long.</mat-error>
-                  <mat-error *ngIf="registerForm.get('lastName')?.errors?.['pattern']">
-                     Please use only letters, or a hyphen if your last name is hyphenated.
-                  </mat-error>
-               </mat-form-field>
-            </div>
+        <div class="label">
+          <mat-form-field class="mat-form-field" appearance="fill">
+            <mat-label>Enter your Last Name</mat-label>
+            <input matInput formControlName="lastName" />
+            <mat-error
+              *ngIf="registerForm.get('lastName')?.errors?.['required']"
+              >Last Name is required.</mat-error
+            >
+            <mat-error
+              *ngIf="registerForm.get('lastName')?.errors?.['minlength']"
+              >Last Name must be at least 2 characters long.</mat-error
+            >
+            <mat-error
+              *ngIf="registerForm.get('lastName')?.errors?.['maxlength']"
+              >Last Name must be no more than 50 characters long.</mat-error
+            >
+            <mat-error
+              *ngIf="registerForm.get('lastName')?.errors?.['pattern']"
+            >
+              Please use only letters, or a hyphen if your last name is
+              hyphenated.
+            </mat-error>
+          </mat-form-field>
+        </div>
 
-            <div class="label">
-               <mat-form-field class="mat-form-field" appearance="fill">
-                  <mat-label>Enter your Username</mat-label>
-                  <input matInput formControlName="username">
-                  <mat-error *ngIf="registerForm.get('username')?.errors?.['required']">Username is
-                     required.</mat-error>
-                  <mat-error *ngIf="registerForm.get('username')?.errors?.['minlength']">Username must be at least 2
-                     characters long.</mat-error>
-                  <mat-error *ngIf="registerForm.get('username')?.errors?.['maxlength']">Username must be no more than
-                     20 characters long.</mat-error>
-                  <mat-error *ngIf="registerForm.get('username')?.errors?.['pattern']">
-                     Please use only latin letters, numbers, hyphens and/or underscores.
-                  </mat-error>
-               </mat-form-field>
-            </div>
+        <div class="label">
+          <mat-form-field class="mat-form-field" appearance="fill">
+            <mat-label>Enter your Username</mat-label>
+            <input matInput formControlName="username" />
+            <mat-error
+              *ngIf="registerForm.get('username')?.errors?.['required']"
+              >Username is required.</mat-error
+            >
+            <mat-error
+              *ngIf="registerForm.get('username')?.errors?.['minlength']"
+              >Username must be at least 2 characters long.</mat-error
+            >
+            <mat-error
+              *ngIf="registerForm.get('username')?.errors?.['maxlength']"
+              >Username must be no more than 20 characters long.</mat-error
+            >
+            <mat-error
+              *ngIf="registerForm.get('username')?.errors?.['pattern']"
+            >
+              Please use only latin letters, numbers, hyphens and/or
+              underscores.
+            </mat-error>
+          </mat-form-field>
+        </div>
 
-            <div class="label">
-               <mat-form-field class="mat-form-field" appearance="fill">
-                  <mat-label>Enter your E-mail</mat-label>
-                  <input matInput formControlName="email">
-                  <mat-error *ngIf="registerForm.get('email')?.errors?.['required']">E-mail is required.</mat-error>
-                  <mat-error *ngIf="registerForm.get('email')?.errors?.['minlength']">E-mail must be at least 10
-                     characters long.</mat-error>
-                     <mat-error *ngIf="registerForm.get('email')?.errors?.['maxlength']">E-mail must be no more than
-                        50 characters long.</mat-error>
-                  <mat-error *ngIf="registerForm.get('email')?.errors?.['emailValid']">Invalid email
-                     address.</mat-error>
-               </mat-form-field>
-            </div>
+        <div class="label">
+          <mat-form-field class="mat-form-field" appearance="fill">
+            <mat-label>Enter your E-mail</mat-label>
+            <input matInput formControlName="email" />
+            <mat-error *ngIf="registerForm.get('email')?.errors?.['required']"
+              >E-mail is required.</mat-error
+            >
+            <mat-error *ngIf="registerForm.get('email')?.errors?.['minlength']"
+              >E-mail must be at least 10 characters long.</mat-error
+            >
+            <mat-error *ngIf="registerForm.get('email')?.errors?.['maxlength']"
+              >E-mail must be no more than 50 characters long.</mat-error
+            >
+            <mat-error *ngIf="registerForm.get('email')?.errors?.['emailValid']"
+              >Invalid email address.</mat-error
+            >
+          </mat-form-field>
+        </div>
 
-            <ng-container formGroupName="passGroup">
-               <div class="label">
-                  <mat-form-field class="mat-form-field" appearance="fill">
-                     <mat-label>Enter your Password</mat-label>
-                     <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
-                     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-                        [attr.aria-pressed]="hide">
-                        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                     </button>
-                     <mat-error *ngIf="passGroup?.get('password')?.errors?.['required']">Password is
-                        required.</mat-error>
-                     <mat-error *ngIf="passGroup?.get('password')?.errors?.['minlength']">Password must be between 6
-                        and 24 characters long.</mat-error>
-                     <mat-error *ngIf="passGroup?.get('password')?.errors?.['maxlength']">Password must be between 6
-                        and 24 characters long.</mat-error>
-                  </mat-form-field>
-               </div>
+        <ng-container formGroupName="passGroup">
+          <div class="label">
+            <mat-form-field class="mat-form-field" appearance="fill">
+              <mat-label>Enter your Password</mat-label>
+              <input
+                matInput
+                [type]="hide ? 'password' : 'text'"
+                formControlName="password"
+              />
+              <button
+                type="button"
+                mat-icon-button
+                matSuffix
+                (click)="hide = !hide"
+                [attr.aria-label]="'Hide password'"
+                [attr.aria-pressed]="hide"
+              >
+                <mat-icon>{{
+                  hide ? "visibility_off" : "visibility"
+                }}</mat-icon>
+              </button>
+              <mat-error
+                *ngIf="passGroup?.get('password')?.errors?.['required']"
+                >Password is required.</mat-error
+              >
+              <mat-error
+                *ngIf="passGroup?.get('password')?.errors?.['minlength']"
+                >Password must be between 6 and 24 characters long.</mat-error
+              >
+              <mat-error
+                *ngIf="passGroup?.get('password')?.errors?.['maxlength']"
+                >Password must be between 6 and 24 characters long.</mat-error
+              >
+            </mat-form-field>
+          </div>
 
-               <div class="label">
-                  <mat-form-field class="mat-form-field" appearance="fill">
-                     <mat-label>Repeat Password</mat-label>
-                     <input matInput [type]="hideRe ? 'password' : 'text'" formControlName="rePassword">
-                     <button mat-icon-button matSuffix (click)="hideRe = !hideRe"
-                        [attr.aria-label]="'Hide repeat password'" [attr.aria-pressed]="hideRe">
-                        <mat-icon>{{hideRe ? 'visibility_off' : 'visibility'}}</mat-icon>
-                     </button>
-                  </mat-form-field>
-                  <ng-container *ngIf="passGroup?.get('rePassword')?.touched">
-                     <mat-error *ngIf="passGroup?.errors?.['matchPass']">Repeat Password does not match
-                        Password!</mat-error><br>
-                  </ng-container>
-               </div>
+          <div class="label">
+            <mat-form-field class="mat-form-field" appearance="fill">
+              <mat-label>Repeat Password</mat-label>
+              <input
+                matInput
+                [type]="hideRe ? 'password' : 'text'"
+                formControlName="rePassword"
+              />
+              <button
+                type="button"
+                mat-icon-button
+                matSuffix
+                (click)="hideRe = !hideRe"
+                [attr.aria-label]="'Hide repeat password'"
+                [attr.aria-pressed]="hideRe"
+              >
+                <mat-icon>{{
+                  hideRe ? "visibility_off" : "visibility"
+                }}</mat-icon>
+              </button>
+            </mat-form-field>
+            <ng-container *ngIf="passGroup?.get('rePassword')?.touched">
+              <mat-error *ngIf="passGroup?.errors?.['matchPass']"
+                >Repeat Password does not match Password!</mat-error
+              ><br />
             </ng-container>
+          </div>
+        </ng-container>
 
-            <div class="label">
-               <mat-form-field class="mat-form-field" appearance="fill">
-                  <mat-label>Enter your Avatar URL</mat-label>
-                  <input matInput formControlName="avatar">
-                  <mat-error *ngIf="passGroup?.get('avatar')?.errors?.['required']">Avatar is
-                     required.</mat-error>
-                  <mat-error *ngIf="registerForm.get('avatar')?.errors?.['pattern']">
-                     Please provide a valid URL ending with .jpg, .jpeg, .png, or .gif
-                  </mat-error>
-               </mat-form-field>
-            </div>
+        <div class="label">
+          <mat-form-field class="mat-form-field" appearance="fill">
+            <mat-label>Enter your Avatar URL</mat-label>
+            <input matInput formControlName="avatar" />
+            <mat-error *ngIf="passGroup?.get('avatar')?.errors?.['required']"
+              >Avatar is required.</mat-error
+            >
+            <mat-error *ngIf="registerForm.get('avatar')?.errors?.['pattern']">
+              Please provide a valid URL ending with .jpg, .jpeg, .png, or .gif
+            </mat-error>
+          </mat-form-field>
+        </div>
 
-            <mat-card-actions>
-               <button mat-raised-button color="primary" type="submit"
-                  [disabled]="registerForm.invalid"><mat-icon>send</mat-icon>Register</button>
-            </mat-card-actions>
-         </form>
-      </mat-card-content>
-      <mat-card-footer>
-         <mat-progress-bar mode="determinate" value="100"></mat-progress-bar>
-      </mat-card-footer>
-   </mat-card>
+        <mat-card-actions>
+          <button
+            mat-raised-button
+            color="primary"
+            type="submit"
+            [disabled]="registerForm.invalid"
+          >
+            <mat-icon>send</mat-icon>Register
+          </button>
+        </mat-card-actions>
+      </form>
+    </mat-card-content>
+    <mat-card-footer>
+      <mat-progress-bar mode="determinate" value="100"></mat-progress-bar>
+    </mat-card-footer>
+  </mat-card>
 </div>
